--- a/.github/workflows/lightpanda-x86_64.yml
+++ b/.github/workflows/lightpanda-x86_64.yml
@@ -1,4 +1,4 @@
-name: Lightpanda Browser Nightly Build
+name: Lightpanda Browser x86_64 Build
 
 on:
     schedule:
@@ -13,20 +13,15 @@ jobs:
             packages: write
 
         steps:
-            - name: Checkout lightpanda-browser repository
+            - name: Checkout repository
               uses: actions/checkout@v4
-              with:
-                  repository: lightpanda-io/browser
-                  path: lightpanda-browser
 
             - name: Set up Docker Buildx
               uses: docker/setup-buildx-action@v3
 
             - name: Get commit hash
               id: commit
-              run: |
-                  cd lightpanda-browser
-                  echo "COMMIT_HASH=$(git rev-parse --short HEAD)" >> $GITHUB_OUTPUT
+              run: echo "COMMIT_HASH=$(git rev-parse --short HEAD)" >> $GITHUB_OUTPUT
 
             - name: Login to Docker Hub
               uses: docker/login-action@v3
@@ -37,10 +32,12 @@ jobs:
             - name: Build and push Docker image
               uses: docker/build-push-action@v5
               with:
-                  context: ./lightpanda-browser
+                  context: .
+                  file: ./x86_64.Dockerfile
                   push: true
+                  platforms: linux/amd64
                   tags: |
-                      andalouse/lightpanda-browser:nightly
-                      andalouse/lightpanda-browser:${{ steps.commit.outputs.COMMIT_HASH }}
+                      andalouse/lightpanda-browser:nightly-amd64
+                      andalouse/lightpanda-browser:${{ steps.commit.outputs.COMMIT_HASH }}-amd64
                   cache-from: type=gha
                   cache-to: type=gha,mode=max
