disabled telemetry and removed liveness probes

--- a/charts/lightpanda/templates/deployment.yaml
+++ b/charts/lightpanda/templates/deployment.yaml
@@ -44,6 +44,9 @@ spec:
             - name: http
               containerPort: {{ .Values.service.port }}
               protocol: TCP
+          env:
+            - name: LIGHTPANDA_DISABLE_TELEMETRY
+              value: "true"
           {{- with .Values.livenessProbe }}
           livenessProbe:
             {{- toYaml . | nindent 12 }}
